--- a/styles.css
+++ b/styles.css
@@ -20,3 +20,19 @@ input {
     display: block;
     appearance: none;
 }
+
+#translucent {
+    position: relative;
+    top: 25%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+#website-name {
+    text-align: center;
+    font-size: 5em;
+    color: rgb(243, 243, 243);
+}
+
+#main {
+    padding: 0 0 0 2rem;
+}
