--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -13,14 +14,6 @@ body {
     background-size: 40vw 100vh;
 }
 
-.input-container {
-    display: inline-block;
-}
-input {
-    display: block;
-    appearance: none;
-}
-
 #translucent {
     position: relative;
     top: 25%;
@@ -29,10 +22,98 @@ input {
 
 #website-name {
     text-align: center;
-    font-size: 5em;
+    font-size: 5rem;
     color: rgb(243, 243, 243);
 }
 
 #main {
-    padding: 0 0 0 2rem;
+    display: flex;
+    flex-direction: column;
+    padding: 0 2rem 0 2rem;
+    width: 60%;
+    justify-content: center;
+    align-items: center;
+}
+
+#info {
+    padding-top: 5%;
+}
+
+.info-text {
+    font-size: 1.8em;
+    color: rgb(22, 9, 83);
+    font-weight: 700;
+    text-align: center;
+}
+
+label, input {
+    font-size: 1.2em;
+}
+
+label {
+    font-weight: 800;
+}
+
+form {
+    margin-top: 3%;
+    width: 60%;
+}
+
+#form-container {
+    display: flex;
+    flex-direction: column;
+    gap: 2%;
+    border: 2px rgb(22, 9, 83) solid;
+    border-radius: 10px;
+    box-shadow: 5px 10px rgb(30, 12, 110);
+    background-color: white;
+    color: rgb(22, 9, 83);
+    margin-bottom: 5%;
+}
+
+.sub-container {
+    display: flex;
+    font-size: inherit;
+    justify-content: space-evenly;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10%;
+    margin: 1rem 0;
+}
+
+.input-container {
+    display: inline-block;
+}
+
+input {
+    display: block;
+    appearance: none;
+    border: 2px rgb(204, 204, 204) solid;
+    border-radius: 5px;
+    outline: none;
+    width: 100%;
+    height: 1.5em;
+}
+
+input:focus {
+    border: 2px rgb(42, 3, 133) solid;
+    border-radius: 5px;
+}
+
+button[type="submit"] {
+    font-size: 1.4rem;
+    font-weight: 800;
+    padding: 0.3rem;
+    width: 12rem;
+    color: white;
+    background-color: rgb(42, 3, 133);
+    border: 2px rgb(42, 3, 133) solid;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+button[type="submit"]:hover {
+    background-color: white;
+    color: rgb(42, 3, 133);
+    border: 2px rgb(42, 3, 133) solid;
 }
