--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ body {
     width: 60%;
     justify-content: center;
     align-items: center;
+    background-color: rgb(245, 245, 245);
 }
 
 #info {
@@ -40,9 +41,9 @@ body {
 }
 
 .info-text {
-    font-size: 1.8em;
+    font-size: 4.5em;
     color: rgb(22, 9, 83);
-    font-weight: 700;
+    font-weight: 900;
     text-align: center;
 }
 
@@ -65,10 +66,11 @@ form {
     gap: 2%;
     border: 2px rgb(22, 9, 83) solid;
     border-radius: 10px;
-    box-shadow: 5px 10px rgb(30, 12, 110);
+    box-shadow: 0px 10px 8px rgb(156, 156, 156);
     background-color: white;
     color: rgb(22, 9, 83);
     margin-bottom: 5%;
+    padding: 1rem 0;
 }
 
 .sub-container {
@@ -100,9 +102,9 @@ input:focus {
 }
 
 button[type="submit"] {
-    font-size: 1.4rem;
+    font-size: 1.8rem;
     font-weight: 800;
-    padding: 0.3rem;
+    padding: 1rem 0.3rem;
     width: 100%;
     color: white;
     background-color: rgb(42, 3, 133);
@@ -118,8 +120,12 @@ button[type="submit"]:hover {
     border: 2px rgb(42, 3, 133) solid;
 }
 
+input:invalid {
+    border-color: red;
+}
+
 #account-exist {
-    margin-top: 0.5rem;
+    margin-top: 1rem;
     font-size: 1.4rem;
 }
 
